# When-Does-Diversity-Help-in-Active-Learning-

./: .gitignore  CITATION.cff  README.md  pyproject.toml
benchmarks/: bench_latent.py  bench_real.py  bench_synthetic.py  learning_curves_one_dataset.py
deep/: analyze_indicators.py  bench_latent_deep.py  bench_real_deep.py  bench_synthetic_deep.py  deepanalysis_README.md  taxonomy.py
legacy/Code_AL_Fred/: BADGE_E.py  Coreset.py  DBAL.py  DBAL_E.py  ProbCover.py  QueryStrategy.py  RANK2022.py  RandomSampling.py  RankBatch.py  TypiClust.py  UncertaintySampling.py  loadfile.py  util.py
resultaanalysis/resultanalysis/: README.md  config.py  requirements.txt  run_all.py  step10_trend_robustness.py  step1_load.py  step2_saturation.py  step3_aulc.py  step4_leaderboard.py  step5_structure.py  step6_figures.py  step7_tables.py  step8_difficulty.py  step9_classifier.py
src/alframework/config/: __init__.py  config_strategies.py  strategies_config.py  strategies_parameter.py
src/alframework/core/: labeler.py  metrics.py  registry.py  runner.py  runner_back.py  state.py  structural_indicators.py
src/alframework/scripts/: run_experiment.py
src/alframework/strategies/: __init__.py  active_pseudolabelv4.py  active_pseudolabelv44.py  active_pseudolabelv51.py  active_pseudolabelv52.py  active_pseudolabelv53.py  active_pseudolabelv54.py  active_pseudolabelv55.py  active_pseudolabelv56.py  active_pseudolabelv57.py  (+19 more)
tests/: common.py  conftest.py  smoke_test.py  test_strategies_api.py  test_syntheticbuilder.py
tools/: analyze_histories.py  analyze_histories_classique.py
(+15 files in other folders)
