[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "alframework"
version = "0.1.0"
description = "Active Learning & Active Pseudo-Labeling research framework (publication-ready)."
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [{name = "Your Name"}]
dependencies = [
  "numpy>=1.22",
  "scikit-learn>=1.2",
]

[project.optional-dependencies]
dev = [
  "pytest>=7",
  "ruff>=0.3",
  "mypy>=1.6",
  "pre-commit>=3.5",
]
torch = ["torch>=2.0"]
skactiveml = ["skactiveml>=0.5"]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py39"
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501"]
